# Ponce

./: .appveyor.yml  .gitattributes  .gitbook.yml  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  LICENSE.md  QtInstallation.md  README.md  SUMMARY.md  VERSION_NUMBER  ponce-limitations.md  version_number_update.sh
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  remove-old-artifacts.yaml  windows-ci.yml
Ponce/: README.md
Ponce/hello/: hello.cpp  hello.sln  hello.vcproj  hello.vcxproj  makefile
Ponce/hello/Debug/: hello.lib
Ponce/hello/Release/: hello.lib
Ponce/include/: allins.hpp  area.hpp  auto.hpp  bytes.hpp  dbg.hpp  demangle.hpp  diskio.hpp  entry.hpp  enum.hpp  err.h  exehdr.h  expr.hpp  fixup.hpp  fpro.h  frame.hpp  funcs.hpp  gdl.hpp  ida.hpp  ida_highlighter.hpp  idd.hpp  idp.hpp  ieee.h  intel.hpp  kernwin.hpp  lines.hpp  llong.hpp  loader.hpp  nalt.hpp  name.hpp  netnode.hpp  offset.hpp  pro.h  prodir.h  pronet.h  regex.h  segment.hpp  sistack.hpp  srarea.hpp  struct.hpp  typeinf.hpp  (+3 more)
Ponce/include_IDA6.8/: allins.hpp  area.hpp  auto.hpp  bytes.hpp  compress.hpp  dbg.hpp  demangle.hpp  diskio.hpp  entry.hpp  enum.hpp  expr.hpp  fixup.hpp  fpro.h  frame.hpp  funcs.hpp  gdl.hpp  graph.hpp  ida.hpp  idd.hpp  idp.hpp  ieee.h  intel.hpp  ints.hpp  kernwin.hpp  lex.hpp  lines.hpp  llong.hpp  loader.hpp  moves.hpp  nalt.hpp  name.hpp  netnode.hpp  pro.h  prodir.h  pronet.h  regex.h  registry.hpp  segment.hpp  sistack.hpp  strlist.hpp  (+3 more)
Ponce/include_IDA6.95/: allins.hpp  allow_deprecated.hpp  auto.hpp  bitrange.hpp  dbg.hpp  demangle.hpp  diskio.hpp  enum.hpp  expr.hpp  fixup.hpp  fpro.h  funcs.hpp  gdl.hpp  graph.hpp  help.h  ida.hpp  idd.hpp  idp.hpp  intel.hpp  ints.hpp  kernwin.hpp  lex.hpp  lines.hpp  llong.hpp  loader.hpp  md5.h  moves.hpp  nalt.hpp  name.hpp  pro.h  queue.hpp  regex.h  registry.hpp  search.hpp  segment.hpp  sistack.hpp  strlist.hpp  struct.hpp  typeinf.hpp  xref.hpp
Ponce/lib/x64_linux_gcc_64/: dumb.ox64
Ponce/lib/x64_mac_gcc_64/: dumb.ox64
Ponce/lib/x86_linux_gcc_32/: dumb.o32
Ponce/lib/x86_mac_gcc_32/: dumb.o32
Ponce/lib/x86_win_qt/: Qt5Core.lib  Qt5PrintSupport.lib  Qt5Widgets.lib
Ponce/lib/x86_win_vc_32/: ida.lib
Ponce/lib/x86_win_vc_64/: ida.lib
Ponce/lib_IDA6.8/x64_linux_gcc_64/: dumb.ox64
Ponce/lib_IDA6.8/x64_mac_gcc_64/: dumb.ox64
Ponce/lib_IDA6.8/x86_linux_gcc_32/: dumb.o32
Ponce/lib_IDA6.8/x86_mac_gcc_32/: dumb.o32
Ponce/lib_IDA6.8/x86_win_qt/: QtCore4.lib  QtXml4.lib
Ponce/lib_IDA6.8/x86_win_vc_32/: ida.lib
Ponce/lib_IDA6.8/x86_win_vc_64/: ida.lib
Ponce/lib_IDA6.95/x64_linux_gcc_64/: dumb.ox64
Ponce/lib_IDA6.95/x64_mac_gcc_64/: dumb.ox64
Ponce/lib_IDA6.95/x86_linux_gcc_32/: dumb.o32
Ponce/lib_IDA6.95/x86_mac_gcc_32/: dumb.o32
Ponce/lib_IDA6.95/x86_win_qt/: Qt5Core.lib  Qt5PrintSupport.lib  Qt5Widgets.lib
Ponce/lib_IDA6.95/x86_win_vc_32/: ida.lib
Ponce/lib_IDA6.95/x86_win_vc_64/: ida.lib
Ponce/lib_IDA7.0/x64_win_qt/: Qt5Core.lib  Qt5PrintSupport.lib  Qt5Widgets.lib
Ponce/lib_IDA7.0/x64_win_vc_32/: ida.lib
Ponce/lib_IDA7.0/x64_win_vc_64/: ida.lib
Ponce/lib_IDA7.0/x86_linux_gcc_32/: dumb.o32
Ponce/lib_IDA7.0/x86_mac_gcc_32/: dumb.o32
Ponce/lib_IDA7.0/x86_win_vc_32/: ida.lib
Ponce/src/: actions.cpp  actions.cpp.orig  actions.hpp  blacklisted.hpp  callbacks.cpp  callbacks.hpp  context.cpp  context.hpp  formChoser.cpp  formChoser.hpp  formConfiguration.cpp  formConfiguration.hpp  formTaintSymbolizeInput.cpp  formTaintSymbolizeInput.hpp  formTaintWindow.cpp  formTaintWindow.hpp  globals.cpp  globals.hpp  main.cpp  runtime_status.hpp  snapshot.cpp  snapshot.hpp  taintWindow.cpp  taintWindow.hpp  tainting.cpp  tainting.hpp  tainting_n_symbolic.cpp  tainting_n_symbolic.hpp  trigger.cpp  trigger.hpp  utils.cpp  utils.hpp
builds/PonceBuild/: Ponce.sln
builds/PonceBuild/Ponce/: Ponce.vcxproj  Ponce.vcxproj.filters  callbacks.cpp
builds/PonceBuild/Win32/: Ponce.lib  Ponce.p64  Ponce.plw
builds/PonceBuild/linux/: CMakeLists.txt
builds/PonceBuild/nix/: CMakeLists.txt  README.md
builds/TritonBuild/: README.md
builds/TritonBuild/VSProject/: triton.sln
builds/TritonBuild/linux/x64/: README.md
builds/TritonBuild/osx/: README.md
docs/: README.md  SUMMARY.md  SUMMARY2.md  faq.md  negate-and-inject.md  summary.md  summary2.md
docs/examples/: negate-inject-and-restore.md  symbolic-engine.md  taint-engine.md
docs/misc/: building.md  debugging.md  faq.md  ponce-limitations.md  port.md
docs/usage/: blacklist.md  enable-disable.md  shortcuts.md  solve-conditions.md  symbolic-and-taint-engines.md  symbolize-taint-data.md
examples/: crackme_hash.cpp  crackme_xor.cpp  fread_SAGE.cpp  long_time_to_solve.cpp
external-libs/includes/capstone-3.0.5-rc2-win64/: capstone.lib
external-libs/libs/ALL_dyn_MD_x64/: drmgr.lib  drutil_static.lib  drwrap_static.lib
external-libs/libs/ALL_dyn_MD_x64_DR_debug/: drcontainers.lib  drmgr.lib  drreg.lib  drutil.lib  drwrap_static.lib  dynamorio.lib
external-libs/libs/ALL_dyn_MD_x86/: drmgr.lib  drreg.lib  drwrap.lib2  drwrap_static.lib  dynamorio.lib
external-libs/libs/ALL_dyn_MD_x86_DR_debug/: capstone_dll.lib  drcontainers.lib  drmgr.lib  drutil.lib  drwrap.lib  drwrap_static.lib  dynamorio.lib
external-libs/libs/ALL_static_MD_x64/: drcontainers.lib  drreg.lib  dynamorio.lib
external-libs/libs/ALL_static_MD_x86/: drcontainers.lib  drutil_static.lib
external-libs/libs/ALL_static_MT_x64/: capstone.lib  libz3.lib
src/: actions.cpp  actions.hpp  blacklist.cpp  blacklist.hpp  blacklisted.hpp  callbacks.cpp  callbacks.hpp  context.cpp  context.hpp  formConfiguration.cpp  formConfiguration.hpp  formTaintSymbolizeInput.cpp  formTaintSymbolizeInput.hpp  formTaintWindow.cpp  formTaintWindow.hpp  globals.cpp  globals.hpp  main.cpp  ponce_hexrays.cpp  ponce_hexrays.hpp  runtime_status.hpp  snapshot.cpp  snapshot.hpp  solver.cpp  solver.hpp  symVarTable.cpp  symVarTable.hpp  tainting_n_symbolic.cpp  tainting_n_symbolic.hpp  trigger.cpp  trigger.hpp  triton_logic.cpp  triton_logic.hpp  utils.cpp  utils.hpp
(+7 files in other folders)
